# databank-rs

./: Cargo.toml  PLAN_DATABANK_0.1.md  PLAN_DATABANK_0.2.md  PLAN_DATABANK_0.3.md  README.txt
src/: access.rs  bank.rs  bridge.rs  cluster.rs  codec.rs  entry.rs  error.rs  fulfiller.rs  index.rs  ivf.rs  journal.rs  lib.rs  similarity.rs  types.rs
tests/: jar_test.rs
