[package]
name = "databank-rs"
version = "0.4.0"
edition = "2021"
authors = ["Magnus Trent <magnus@blackfall.dev>"]
license = "MIT"
repository = "https://github.com/Blackfall-Labs/databank-rs"
description = "Distributed representational memory — signal-vector banks with typed edges"
keywords = ["memory", "neural", "ternary", "cognitive", "databank"]
categories = ["science", "simulation"]

[features]
default = []
ternsig = ["dep:ternsig"]

[dependencies]
ternary-signal = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
ternsig = { version = "1.4", optional = true }

[dev-dependencies]
tempfile = "3.0"
ternsig = "1.4"
